[workspace]
members = [
  "crates/aliveness",
  "crates/approx_derive",
  "crates/argument_parsers",
  "crates/audio",
  "crates/bevy_mujoco",
  # "crates/bevyhavior_simulator",
  "crates/booster",
  "crates/buffered_watch",
  "crates/calibration",
  "crates/code_generation",
  "crates/communication",
  "crates/context_attribute",
  "crates/coordinate_systems",
  "crates/egui_bevy",
  "crates/energy_optimization",
  "crates/filtering",
  "crates/framework",
  "crates/geometry",
  "crates/hardware",
  "crates/hsl_network",
  "crates/hsl_network_messages",
  "crates/hula_types",
  "crates/hulk_booster",
  "crates/hulk_imagine",
  "crates/hulk_manifest",
  "crates/hulk_mujoco",
  "crates/hulk_replayer",
  "crates/hulk_ros_z",
  "crates/hulk_widgets",
  "crates/hungarian_algorithm",
  "crates/hydra",
  "crates/kinematics",
  "crates/linear_algebra",
  "crates/microphones",
  "crates/motion",
  "crates/motionfile",
  "crates/nodes/active_vision",
  "crates/nodes/ball_filter",
  "crates/nodes/ball_state_composer",
  "crates/nodes/behavior_node",
  "crates/nodes/booster_sdk_interface",
  "crates/nodes/button_event_bridge",
  "crates/nodes/button_event_handler",
  "crates/nodes/camera_matrix_calculator",
  "crates/nodes/fake_odometry",
  "crates/nodes/fall_down_state_receiver",
  "crates/nodes/field_border_detection",
  "crates/nodes/game_controller_filter",
  "crates/nodes/game_controller_state_filter",
  "crates/nodes/ground_provider",
  "crates/nodes/head_motion",
  "crates/nodes/image_receiver",
  "crates/nodes/image_segmenter",
  "crates/nodes/inference",
  "crates/nodes/kick",
  "crates/nodes/kinematics_provider",
  "crates/nodes/led_handler",
  "crates/nodes/line_detection",
  "crates/nodes/localization",
  "crates/nodes/look_around",
  "crates/nodes/look_at",
  "crates/nodes/low_command_publisher",
  "crates/nodes/low_state_bridge",
  "crates/nodes/message_filter",
  "crates/nodes/message_receiver",
  "crates/nodes/microphone_recorder",
  "crates/nodes/motor_commands_collector",
  "crates/nodes/obstacle_filter",
  "crates/nodes/obstacle_receiver",
  "crates/nodes/odometer_bridge",
  "crates/nodes/primary_state_filter",
  "crates/nodes/robot_mode_handler",
  "crates/nodes/rotate_head",
  "crates/nodes/rule_obstacle_composer",
  "crates/nodes/safe_pose_checker",
  "crates/nodes/search_suggestor",
  "crates/nodes/segment_filter",
  "crates/nodes/stand_up",
  "crates/nodes/team_ball_receiver",
  "crates/nodes/time_to_reach_kick_position",
  "crates/nodes/trigger",
  "crates/nodes/walking",
  "crates/nodes/whistle_detection",
  "crates/nodes/whistle_filter",
  "crates/nodes/world_state_composer",
  "crates/nodes/world_to_field_provider",
  "crates/opn",
  "crates/parameters",
  "crates/path_serde",
  "crates/path_serde_derive",
  "crates/projection",
  "crates/ransac",
  "crates/repository",
  "crates/ros-z",
  "crates/ros-z-cdr",
  "crates/ros-z-cli",
  "crates/ros-z-derive",
  "crates/ros-z-protocol",
  "crates/ros-z-schema",
  "crates/ros-z-streams",
  "crates/ros2",
  "crates/sensor_receiver",
  "crates/simulation_message",
  "crates/source_analyzer",
  "crates/types",
  "crates/vision",
  "crates/walking_inference",
  "crates/world_state",
  "crates/x5_receiver",
  "crates/zed",
  "crates/zenoh_bridge",
  "tools/annotato",
  "tools/depp",
  "tools/fanta",
  "tools/mujoco-simulator/mujoco-rust-server",
  "tools/parameter_tester",
  "tools/pepsi",
  "tools/tensorrt-compile",
  "tools/twix",
  "tools/vista",
  "tools/widget_gallery",
]
resolver = "2"
# services are built independently by yocto
exclude = [
  "services/aliveness",
  "services/power-panic",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[workspace.dependencies]
active_vision = { path = "crates/nodes/active_vision" }
aliveness = { path = "crates/aliveness" }
alsa = "0.11.0"
approx = "0.5.1"
approx_derive = { path = "crates/approx_derive" }
arc-swap = "1.7"
argument_parsers = { path = "crates/argument_parsers" }
atty = "0.2.14"
audio = { path = "crates/audio" }
ball_filter = { path = "crates/nodes/ball_filter" }
ball_state_composer = { path = "crates/nodes/ball_state_composer" }
bat = { version = "0.25.0", default-features = false, features = [
  "paging",
  "regex-fancy",
] }
behavior_node = { path = "crates/nodes/behavior_node" }
bevy = { version = "0.18.0", default-features = false }
bevy_mujoco = { path = "crates/bevy_mujoco" }
bevy_panorbit_camera = { version = "0.34.0", features = ["bevy_egui"] }
bincode = "1.3.3"
bindgen = "0.71.1"
blake3 = { version = "1.8.2", features = ["mmap", "serde"] }
booster = { path = "crates/booster" }
booster_sdk = "0.1.1-alpha.1"
booster_sdk_interface = { path = "crates/nodes/booster_sdk_interface" }
buffered_watch = { path = "crates/buffered_watch" }
button_event_bridge = { path = "crates/nodes/button_event_bridge" }
button_event_handler = { path = "crates/nodes/button_event_handler" }
bytemuck = "1"
byteorder = "1.5.0"
bytes = { version = "1.11.0", features = ["serde"] }
calibration = { path = "crates/calibration" }
camera_matrix_calculator = { path = "crates/nodes/camera_matrix_calculator" }
cdr = "0.2.4"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive", "env"] }
clap_complete = "4.5.44"
code_generation = { path = "crates/code_generation" }
color-eyre = "0.6.3"
communication = { path = "crates/communication" }
context_attribute = { path = "crates/context_attribute" }
convert_case = "0.7.1"
coordinate_systems = { path = "crates/coordinate_systems" }
ctrlc = { version = "3.4.5", features = ["termination"] }
derive_more = { version = "2.0.1", features = [
  "add",
  "add_assign",
  "mul",
  "not",
] }
dirs = "6.0.0"
eframe = { version = "0.33.3", features = ["persistence", "wgpu"] }
egui = { version = "0.33.3", features = ["persistence"] }
egui_bevy = { path = "crates/egui_bevy" }
egui_dock = { version = "0.18.0", features = ["serde"] }
egui_extras = { version = "0.33.3", features = ["image"] }
egui_plot = "0.34.0"
energy_optimization = { path = "crates/energy_optimization" }
enum-iterator = "2.1.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
event-listener = "5"
fake_odometry = { path = "crates/nodes/fake_odometry" }
fall_down_state_receiver = { path = "crates/nodes/fall_down_state_receiver" }
fern = { version = "0.7.1", features = ["colored"] }
field_border_detection = { path = "crates/nodes/field_border_detection" }
filtering = { path = "crates/filtering" }
flume = "0.11.1"
framework = { path = "crates/framework" }
futures-util = "0.3.31"
game_controller_filter = { path = "crates/nodes/game_controller_filter" }
game_controller_state_filter = { path = "crates/nodes/game_controller_state_filter" }
geometry = { path = "crates/geometry" }
gilrs = "0.11.0"
glob = "0.3.2"
ground_provider = { path = "crates/nodes/ground_provider" }
hardware = { path = "crates/hardware" }
head_motion = { path = "crates/nodes/head_motion" }
hex = "0.4"
home = "=0.5.9"
hsl_network = { path = "crates/hsl_network" }
hsl_network_messages = { path = "crates/hsl_network_messages" }
hula_types = { path = "crates/hula_types" }
hulk_manifest = { path = "crates/hulk_manifest" }
hulk_widgets = { path = "crates/hulk_widgets" }
hungarian_algorithm = { path = "crates/hungarian_algorithm" }
hydra = { path = "crates/hydra" }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
image_receiver = { path = "crates/nodes/image_receiver" }
image_segmenter = { path = "crates/nodes/image_segmenter" }
indicatif = "0.18.4"
inference = { path = "crates/nodes/inference" }
insta = "1"
itertools = "0.14.0"
ittapi = "0.4.0"
json5 = "0.4.1"
kick = { path = "crates/nodes/kick" }
kinematics = { path = "crates/kinematics" }
kinematics_provider = { path = "crates/nodes/kinematics_provider" }
lazy_static = "1.5.0"
led_handler = { path = "crates/nodes/led_handler" }
levenberg-marquardt = "0.15.0"
libc = "0.2.169"
line_detection = { path = "crates/nodes/line_detection" }
linear_algebra = { path = "crates/linear_algebra" }
localization = { path = "crates/nodes/localization" }
log = "0.4.25"
look_around = { path = "crates/nodes/look_around" }
look_at = { path = "crates/nodes/look_at" }
low_command_publisher = { path = "crates/nodes/low_command_publisher" }
low_state_bridge = { path = "crates/nodes/low_state_bridge" }
mcap = "0.15.0"
message_filter = { path = "crates/nodes/message_filter" }
message_receiver = { path = "crates/nodes/message_receiver" }
microphone_recorder = { path = "crates/nodes/microphone_recorder" }
microphones = { path = "crates/microphones" }
mlua = { version = "0.10.3", features = ["luajit", "serialize", "vendored"] }
motion = { path = "crates/motion" }
motionfile = { path = "crates/motionfile" }
motor_commands_collector = { path = "crates/nodes/motor_commands_collector" }
nalgebra = { version = "0.34.2", features = [
  "convert-glam030",
  "serde",
  "serde-serialize",
] }
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-conv = "0.4.1"
nucleo-matcher = "0.3.1"
num-derive = "0.4.2"
num-dual = "0.13.2"
num-traits = "0.2"
obstacle_filter = { path = "crates/nodes/obstacle_filter" }
obstacle_receiver = { path = "crates/nodes/obstacle_receiver" }
odometer_bridge = { path = "crates/nodes/odometer_bridge" }
once_cell = "1.20.3"
openvino = { version = "0.8.0", features = ["runtime-linking"] }
opn = { path = "crates/opn" }
optimization_engine = "0.9.1"
ordered-float = "4.6.0"
ort = "=2.0.0-rc.10"
parameters = { path = "crates/parameters" }
parking_lot = "0.12.3"
parry2d = { version = "0.26.0", default-features = false, features = [
  "alloc",
  "required-features",
] }
paste = "1.0"
path_serde = { path = "crates/path_serde" }
path_serde_derive = { path = "crates/path_serde_derive" }
pathdiff = "0.2.3"
pathfinding = "<=4.10.0"
prettyplease = "0.2.29"
primary_state_filter = { path = "crates/nodes/primary_state_filter" }
proc-macro-error = "1.0.4"
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
projection = { path = "crates/projection" }
proptest = "1.6.0"
pyo3 = { version = "0.27.1", features = ["abi3-py313", "extension-module"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
pyo3-log = "0.13.2"
quote = "1.0.38"
rand = "0.9.0"
rand_chacha = { version = "0.9.0", features = ["serde"] }
rand_distr = "0.5.0"
ransac = { path = "crates/ransac" }
regex = "1.11.1"
repository = { path = "crates/repository" }
reqwest = { version = "0.12.28", features = ["blocking"] }
rmp-serde = "1.3.0"
robot = { path = "crates/robot" }
robot_mode_handler = { path = "crates/nodes/robot_mode_handler" }
ros-z = { path = "crates/ros-z", features = ["nalgebra"] }
ros-z-cdr = { path = "crates/ros-z-cdr" }
ros-z-derive = { path = "crates/ros-z-derive" }
ros-z-protocol = { path = "crates/ros-z-protocol" }
ros-z-schema = { path = "crates/ros-z-schema" }
ros-z-streams = { path = "crates/ros-z-streams" }
ros2 = { path = "crates/ros2" }
ros2-client = { version = "0.8.2", features = ["pre-iron-gid"] }
rotate_head = { path = "crates/nodes/rotate_head" }
rule_obstacle_composer = { path = "crates/nodes/rule_obstacle_composer" }
rustfft = "6.2.0"
safe_pose_checker = { path = "crates/nodes/safe_pose_checker" }
search_suggestor = { path = "crates/nodes/search_suggestor" }
segment_filter = { path = "crates/nodes/segment_filter" }
semver = "1.0.25"
sensor_receiver = { path = "crates/sensor_receiver" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_bytes = "0.11.15"
serde_ignored = "0.1.10"
serde_json = "1.0.138"
serial_test = "3.0"
sha2 = "0.10.8"
simba = "0.9.0"
simulation_message = { path = "crates/simulation_message" }
slab = "0.4.11"
smallvec = "1.14.0"
source_analyzer = { path = "crates/source_analyzer" }
splines = { version = "=4.2.0", features = ["serde"] }
stand_up = { path = "crates/nodes/stand_up" }
syn = { version = "2.0.98", features = ["extra-traits", "full"] }
systemd = "0.10.0"
team_ball_receiver = { path = "crates/nodes/team_ball_receiver" }
tempfile = "3.17.0"
thiserror = "2.0.11"
threadbound = "0.1.7"
time_to_reach_kick_position = { path = "crates/nodes/time_to_reach_kick_position" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-util = "0.7.13"
toml = "0.8.20"
toposort-scc = "0.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
trigger = { path = "crates/nodes/trigger" }
trybuild = "1.0"
types = { path = "crates/types" }
uuid = { version = "1.12.1", features = ["v4"] }
vision = { path = "crates/vision" }
walking = { path = "crates/nodes/walking" }
walking_inference = { path = "crates/walking_inference" }
wgpu = "27.0.0"
whistle_detection = { path = "crates/nodes/whistle_detection" }
whistle_filter = { path = "crates/nodes/whistle_filter" }
world_state = { path = "crates/world_state" }
world_state_composer = { path = "crates/nodes/world_state_composer" }
world_to_field_provider = { path = "crates/nodes/world_to_field_provider" }
x5_receiver = { path = "crates/x5_receiver" }
xdg = "2.5.2"
yuv = "0.8.9"
zbus = "5.5.0"
zed = { path = "crates/zed" }
zenoh = "1.9.0"
zenoh-buffers = "1.9.0"
zenoh-ext = "1.9.0"

[patch.crates-io]
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde_derive = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }
# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
serde_core = { git = "https://github.com/HULKs/serde.git", rev = "ef30eb8fdd0ee12e4e6f3f5615c6bb022e02d1b2" }
# Pin RTPS protocol version to 2.3
rustdds = { git = "https://github.com/HULKs/RustDDS.git", rev = "0232af0c67e25e39afb5eef0166edfe493762320" }

egui = { git = "https://github.com/HULKs/egui/", rev = "c310aad9c54618e8845b6707899e2678fec8b842" }
egui-wgpu = { git = "https://github.com/HULKs/egui/", rev = "c310aad9c54618e8845b6707899e2678fec8b842" }
booster_sdk = { git = "https://github.com/IntelligentRoboticsLab/booster_sdk", rev = "638c1973c0a1a729b47b1133af5b4af16a41b9bd" }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16       # TODO: Evaluate performance for different values

[profile.with-debug]
inherits = "dev"
debug = true

[profile.debugger]
inherits = "with-debug"
opt-level = 0
