[package]
edition = "2018"
name = "macros"
version = "0.1.0"
license = "GPL-3.0-only"

[dependencies]
convert_case = "0.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = {version = "1.0.82", features = ["full", "extra-traits", "visit", "visit-mut"]}

[lib]
proc-macro = true
