[package]
edition = "2018"
name = "spl_network"
version = "0.1.0"
license = "GPL-3.0-only"

[build-dependencies]
bindgen = "0.59.2"

[dependencies]
anyhow = "1.0.56"
approx = "0.5.1"
byteorder = "1.4.3"
nalgebra = {version = "0.30.1", features = ["serde-serialize"]}
serde = {version = "1.0.136", features = ["derive"]}
