[package]
name = "aliveness-client"
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"

[dependencies]
aliveness = { path = "../../tools/aliveness" }
color-eyre = { workspace = true }
futures-util = { workspace = true }
hula-types = { path = "../../tools/hula/types/" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true } 
