[package]
name = "aliveness"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
futures-util = { workspace = true }
hula-types = { path = "../../tools/hula/types/" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true } 
zbus = { workspace = true }
