[package]
name = "argument_parsers"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
regex = { workspace = true }
nao = { workspace = true }
spl_network_messages = { workspace = true }