[package]
name = "argument_parsers"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
color-eyre = { workspace = true }
hsl_network_messages = { path = "../hsl_network_messages", default-features = false }
regex = { workspace = true }
robot = { workspace = true }
