[package]
edition = "2021"
license = "GPL-3.0-only"
name = "audio"
version = "0.1.0"

[dependencies]
color-eyre = { workspace = true }
context_attribute = { workspace = true }
filtering = { workspace = true }
framework = { workspace = true }
rustfft = { workspace = true }
types = { workspace = true }
