[package]
name = "audio"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[dependencies]
color-eyre = { workspace = true }
context_attribute = { workspace = true }
filtering = { workspace = true }
framework = { workspace = true }
hardware = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
types = { workspace = true }
