[package]
name = "audio"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
color-eyre = { workspace = true }
context_attribute = { workspace = true }
filtering = { workspace = true }
framework = { workspace = true }
hardware = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
types = { workspace = true }
