[package]
name = "behavior"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
color-eyre = { workspace = true }
context_attribute = { workspace = true }
framework = { workspace = true }
hardware = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
