[package]
edition = "2021"
license = "GPL-3.0-only"
name = "behavior_simulator"
version = "0.1.0"

[lib]
name = "behavior_simulator"

[[bin]]
name = "behavior_simulator"

[dependencies]
alsa = { optional = true, workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
communication = { workspace = true }
control = { workspace = true }
ctrlc = { workspace = true }
cyclers = { workspace = true }
fern = { workspace = true }
framework = { workspace = true }
i2cdev = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
nalgebra = { workspace = true }
nao_camera = { optional = true, workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialize_hierarchy = { workspace = true }
spl_network_messages = { workspace = true }
structs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
types = { workspace = true }
v4l = { optional = true, workspace = true }
webots = { optional = true, workspace = true }

[build-dependencies]
build_script_helpers = { workspace = true }
code_generation = { workspace = true }
color-eyre = { workspace = true }
quote = { workspace = true }
source_analyzer = { workspace = true }
