[package]
name = "bevy_mujoco"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
bevy = { workspace = true, features = [
  "bevy_render",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_window",
  "bevy_pbr",
  "tonemapping_luts",
] }
bincode = { workspace = true }
egui = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
simulation_message = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
wgpu = { workspace = true }
