[package]
name = "bevy_mujoco"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
bevy = { workspace = true, features = ["3d_bevy_render"] }
bincode = { workspace = true }
egui = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
simulation_message = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
wgpu = { workspace = true }
