[package]
name = "bevyhavior_simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
autobins = false

[dependencies]
booster = { workspace = true }
color-eyre = { workspace = true }
coordinate_systems = { workspace = true }
hsl_network_messages = { workspace = true }
linear_algebra = { workspace = true }
ros-z = { workspace = true }
serde = { workspace = true }
types = { workspace = true }
voronoi = { workspace = true }
world_state = { workspace = true }

[[bin]]
name = "behavior_tree_smoke"
path = "src/bin/behavior_tree_smoke.rs"
