[package]
name = "bevyhavior_simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
autobins = false

[dependencies]
approx = { workspace = true }
bevy = { workspace = true }
booster = { workspace = true }
color-eyre = { workspace = true }
coordinate_systems = { workspace = true }
eframe = { workspace = true }
hsl_network_messages = { workspace = true }
linear_algebra = { workspace = true }
ros-z = { workspace = true }
scenario = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
twix = { workspace = true }
types = { workspace = true }
voronoi = { workspace = true }
world_state = { workspace = true }

[[bin]]
name = "behavior_tree_smoke"
path = "src/bin/behavior_tree_smoke.rs"

[[bin]]
name = "mercy_rule_finish"
path = "src/bin/mercy_rule_finish.rs"
