[package]
name = "bevyhavior_simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
approx = { workspace = true }
behavior_node = { workspace = true }
bevy = { workspace = true }
booster = { workspace = true }
color-eyre = { workspace = true }
coordinate_systems = { workspace = true }
eframe = { workspace = true }
egui_dock = { workspace = true }
geometry = { workspace = true }
hsl_network_messages = { workspace = true }
json5 = { workspace = true }
linear_algebra = { workspace = true }
ros-z = { workspace = true }
scenario = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
twix = { workspace = true }
types = { workspace = true }
voronoi = { workspace = true }
