[package]
name = "booster"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "booster"
crate-type = ["rlib", "cdylib"]

[dependencies]
coordinate_systems = { workspace = true }
linear_algebra = { workspace = true }
nalgebra = { workspace = true }
path_serde = { workspace = true }
pyo3 = { workspace = true }
ros2 = { workspace = true }
serde = { workspace = true }
