[package]
name = "booster"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
color-eyre = { workspace = true }
coordinate_systems = { workspace = true }
kinematics = { workspace = true }
linear_algebra = { workspace = true }
path_serde = { workspace = true }
pyo3 = { workspace = true, optional = true }
ros-z = { workspace = true }
ros2 = { workspace = true }
serde = { workspace = true }

[features]
pyo3 = ["dep:pyo3"]
