[package]
name = "booster_low_level_interface"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
coordinate_systems = { workspace = true }
nalgebra = { workspace = true }
linear_algebra = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
types.workspace = true
serde_json.workspace = true