[package]
name = "calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
levenberg-marquardt = { workspace = true }
nalgebra = { workspace = true }
projection = { workspace = true }
thiserror = { workspace = true }
types = { workspace = true }
