[package]
name = "calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
coordinate_systems = { workspace = true }
geometry = { workspace = true }
levenberg-marquardt = { workspace = true }
linear_algebra = { workspace = true }
nalgebra = { workspace = true }
projection = { workspace = true }
serde = { workspace = true }
serialize_hierarchy = { workspace = true }
thiserror = { workspace = true }
types = { workspace = true }
