[package]
name = "calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
color-eyre = { workspace = true }
coordinate_systems = { workspace = true }
geometry = { workspace = true }
levenberg-marquardt = { workspace = true }
linear_algebra = { workspace = true }
nalgebra = { workspace = true }
path_serde = { workspace = true }
projection = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
types = { workspace = true }
