[package]
name = "calibration_control"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
approx = { workspace = true }
bincode = { workspace = true }
color-eyre = { workspace = true }
context_attribute = { workspace = true }
coordinate_systems = { workspace = true }
filtering = { workspace = true }
framework = { workspace = true }
geometry = { workspace = true }
itertools = { workspace = true }
kinematics = { workspace = true }
linear_algebra = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
num-traits = {workspace = true}
ordered-float = { workspace = true }
projection = { workspace = true }
rand = {workspace = true}
serde = { workspace = true }
serialize_hierarchy = { workspace = true }
smallvec = { workspace = true }
types = { workspace = true }
