[package]
name = "code_generation"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
convert_case = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
source_analyzer = { workspace = true }
