[package]
name = "code_generation"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
convert_case = { workspace = true }
itertools = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
source_analyzer = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
