[package]
name = "communication"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[dependencies]
bincode = { workspace = true }
color-eyre = { workspace = true }
framework = { workspace = true, optional = true}
futures-util = { workspace = true }
log = { workspace = true }
parameters = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialize_hierarchy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[features]
server = ["framework"]
