[package]
name = "communication"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
bincode = { workspace = true }
color-eyre = { workspace = true }
framework = { workspace = true, optional = true}
futures-util = { workspace = true }
log = { workspace = true }
parameters = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialize_hierarchy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[features]
server = ["framework"]
