[package]
name = "communication"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
bincode = { workspace = true }
buffered_watch = { workspace = true }
color-eyre = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
parameters = { workspace = true }
path_serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
