[package]
name = "control"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
approx = { workspace = true }
bincode = { workspace = true }
color-eyre = { workspace = true }
context_attribute = { workspace = true }
coordinate_systems = { workspace = true }
filtering = { workspace = true }
framework = { workspace = true }
geometry = { workspace = true }
hardware = { workspace = true }
hungarian_algorithm = { workspace = true }
itertools = { workspace = true }
kinematics = { workspace = true }
log = { workspace = true }
motionfile = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-traits = {workspace = true}
ordered-float = { workspace = true }
projection = { workspace = true }
rand = {workspace = true}
serde = { workspace = true }
serialize_hierarchy = { workspace = true }
smallvec = { workspace = true }
spl_network_messages = { workspace = true }
types = { workspace = true }
energy_optimization = { workspace = true }
