[package]
name = "control"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
approx = { workspace = true }
ball_filter = { workspace = true }
bincode = { workspace = true }
calibration = { workspace = true }
color-eyre = { workspace = true }
context_attribute = { workspace = true }
coordinate_systems = { workspace = true }
energy_optimization = { workspace = true }
filtering = { workspace = true }
framework = { workspace = true }
geometry = { workspace = true }
hardware = { workspace = true }
hungarian_algorithm = { workspace = true }
itertools = { workspace = true }
kinematics = { workspace = true }
linear_algebra = { workspace = true }
log = { workspace = true }
motionfile = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
path_serde = { workspace = true }
projection = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
spl_network_messages = { workspace = true }
splines = { workspace = true }
types = { workspace = true }
walking_engine = { workspace = true }
