[package]
name = "coordinate_systems"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = { workspace = true }
approx_derive = { workspace = true }
serde = { workspace = true }
serialize_hierarchy = { workspace = true }
