[package]
name = "coordinate_systems"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
approx = { workspace = true }
approx_derive = { workspace = true }
path_serde = { workspace = true }
ros-z = { workspace = true, optional = true }
serde = { workspace = true }

[features]
default = ["ros_z"]
ros_z = ["dep:ros-z"]
