[package]
edition = "2021"
license = "GPL-3.0-only"
name = "cyclers"
version = "0.1.0"

[dependencies]
anyhow = "1.0.59"
control = { workspace = true }
framework = { workspace = true }
hardware = { workspace = true }
spl_network2 = { workspace = true }
structs = { workspace = true }
tokio-util = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
build_script_helpers = { workspace = true }
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
source_analyzer = { workspace = true }
