[package]
edition = "2021"
license = "GPL-3.0-only"
name = "cyclers"
version = "0.1.0"

[dependencies]
audio = { workspace = true }
color-eyre = { workspace = true }
control = { workspace = true }
communication = { workspace = true }
framework = { workspace = true }
ittapi = { workspace = true }
spl_network = { workspace = true }
serde = { workspace = true }
serialize_hierarchy = { workspace = true }
structs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
types = { workspace = true }
vision = { workspace = true }

[build-dependencies]
build_script_helpers = { workspace = true }
code_generation = { workspace = true }
color-eyre = { workspace = true }
quote = { workspace = true }
source_analyzer = { workspace = true }
