[package]
name = "egui_bevy"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
bevy = { workspace = true, features = ["3d_bevy_render"] }
bevy_panorbit_camera = { workspace = true }
eframe = { workspace = true }
log = { workspace = true }
