[package]
name = "energy_optimization"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
color-eyre = { workspace = true }
filtering = { workspace = true }
path_serde = { workspace = true }
serde = { workspace = true }
types = { workspace = true }
