[package]
name = "filtering"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
nalgebra = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
types = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
