[package]
edition = "2021"
license = "GPL-3.0-only"
name = "framework"
version = "0.1.0"

[dependencies]
hardware = { workspace = true }
parking_lot = { workspace = true }
structs = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
build_script_helpers = { workspace = true }
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
source_analyzer = { workspace = true }
