[package]
name = "framework"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/hulks/hulk"

[dependencies]
parking_lot = { workspace = true }
types = { workspace = true }

[build-dependencies]
color-eyre = { workspace = true }
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
source_analyzer = { workspace = true }
