[package]
name = "framework"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
bincode = { workspace = true }
color-eyre = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
